# zkp-fl

./: .gitignore  BUILD_STATUS.md  Cargo.toml  README.md  build.bat  build.sh  config.toml  todo.md
advanced_dashboard/: README.md  dashboard.js  index.html  requirements.txt  server.py  start_dashboard.bat  styles.css
ayushdash/: app.py  requirements.txt  start.bat
ayushdash/templates/: index.html
baap_dashboard/: app.py  benchmark.bat  requirements.txt  run.bat
baap_dashboard/static/: style.css
baap_dashboard/templates/: index.html
benchmarks/: Cargo.toml  benchmark_summary_20250627_100325.txt  benchmark_summary_20250627_101138.txt  benchmark_summary_20250627_102153.txt  benchmark_summary_20250627_102348.txt  benchmark_summary_20250627_102756.txt  benchmark_summary_20250627_104226.txt  benchmark_summary_20250627_105515.txt  benchmark_summary_20250627_110334.txt  benchmark_summary_20250627_110432.txt  benchmark_summary_20250627_110525.txt  benchmark_summary_20250627_110631.txt  benchmark_summary_20250627_110805.txt  benchmark_summary_20250627_111038.txt  benchmark_summary_20250627_111058.txt  benchmark_summary_20250627_111124.txt  benchmark_summary_20250627_145319.txt  benchmark_summary_20250627_152057.txt  benchmark_summary_20250627_185317.txt  benchmark_summary_20250627_185459.txt  benchmark_summary_20250630_092349.txt  benchmark_summary_20250630_105902.txt  dashboard.html
benchmarks/src/: main.rs  multi_client.rs  scenarios.rs  single_client.rs
client/: Cargo.toml
client/src/: main.rs  network.rs  prover.rs  trainer.rs
common/: Cargo.toml
common/src/: circuit.rs  dataset.rs  lib.rs  metrics.rs  proof.rs  types.rs
proofs/proofs/: proof_00f0407d-0069-42ec-870d-e0336a92f635.json  proof_0aa91437-e115-45de-a3d9-59f57816a5ac.json  proof_0afa9523-4603-4d2d-8323-3a6f4b9269ca.json  proof_0b634764-3fc2-415b-9a8a-3544d3433b4f.json  proof_0b7e4b1b-38c8-4a43-882b-3bcdac3222cf.json  proof_0b82b4ae-ddb4-48f1-b074-a124d2138157.json  proof_0e700511-385e-4757-b4b3-69522cba9def.json  proof_13597d94-19ee-4256-9aa9-76e92cb307fc.json  proof_15120127-9e28-4001-b391-13ea38ca8593.json  proof_15c0afb1-3035-4b4a-bc00-4c073eff7bb1.json  proof_170fedfa-ee4d-43df-93c5-f17accc82221.json  proof_1d66a984-ac49-4fae-8722-fc486988dd47.json  proof_1e56c564-7715-4eb5-a620-df39c9a56dce.json  proof_1f94a0ed-669b-473b-a7f4-2d82047f8a8c.json  proof_22bb0630-b88f-41e1-9bba-29697ed47662.json  proof_2674e1c1-814e-4655-8104-efb1c6ade48c.json  proof_292a4e31-e412-4961-b6b7-5ae83f40a66a.json  proof_2aee5cbb-7a5a-4384-ae86-05d10535cc1a.json  proof_2c0ee7ab-fcee-4b7a-ba82-3a892d727b16.json  proof_2c8b9665-cd79-47e2-98e3-4280bf40454a.json  proof_2eb9c606-1b8f-4e74-bd45-dd02c0d1fedc.json  proof_3028d10f-3a61-4f26-83df-d75841a1f317.json  proof_322d3689-e1d2-4dac-8e43-52ea294034cd.json  proof_3d56467e-7425-4e3b-a0b2-fae4d8ce9e76.json  proof_3e88a503-f205-4b0b-8f73-c832eccbd286.json  proof_417970ad-19a4-4a8f-a87a-3b715457892e.json  proof_4503f9a0-d851-468d-9948-2ebf2f91665d.json  proof_4b857fad-8245-4e44-99b1-2d9a0a1bc45f.json  proof_4f09d681-4358-4dc6-9458-2d43736b32e3.json  proof_513fd3f9-c25d-4990-9c7b-c12a05866986.json  proof_5292a68f-ea22-4963-9ba0-deee149a4540.json  proof_565fb466-2aad-4381-aad2-59d6530c0f92.json  proof_59995f5a-0a01-48eb-9a7b-2fb68eb49b0a.json  proof_5cd40c26-6017-4c51-81dc-c867fdd1ee80.json  proof_5d9f1a3e-c1f9-4f2a-8659-518554e11ae2.json  proof_6094ba6e-2945-4ce0-9ee6-3d59a223d747.json  proof_61588365-a4c6-46f7-9140-14ed546b63f8.json  proof_626988e6-a92f-41f7-ab59-399cf8d9f513.json  proof_63036912-a43d-42fb-9fc3-6133952a939c.json  proof_6aa1e3a1-4bfe-4b8c-851e-8a9a48b77744.json  (+41 more)
scripts/: simple_visualizer.py
server/: Cargo.toml
server/src/: api.rs  main.rs  metrics.rs  network.rs  storage.rs  verifier.rs
