[workspace]
members = [
    "client",
    "server", 
    "common",
    "benchmarks"
]
resolver = "2"

[workspace.dependencies]
# Cryptographic libraries
halo2_proofs = { git = "https://github.com/geometryxyz/protostar.git", branch = "protostar" }
halo2curves = "0.4"
ff = "0.13"
group = "0.13"
rand_core = { version = "0.6", default-features = false }
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async runtime and networking
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
warp = "0.3"

# Data handling
csv = "1.2"
ndarray = { version = "0.15", features = ["serde"] }
linfa = "0.7"
linfa-linear = "0.7"

# Utilities
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Configuration
config = "0.13"
toml = "0.8"
