[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
common = { path = "../common" }

serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }

tokio = { workspace = true }
reqwest = { workspace = true }

clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }

# Benchmarking specific dependencies
criterion = { workspace = true }
rayon = "1.7"
futures = "0.3"
