[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
common = { path = "../common" }

halo2_proofs = { workspace = true }
halo2curves = { workspace = true }
ff = { workspace = true }
group = { workspace = true }
rand_core = { workspace = true }
rand = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
toml = { workspace = true }

tokio = { workspace = true }
reqwest = { workspace = true }

ndarray = { workspace = true }
csv = { workspace = true }

clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# Additional client dependencies
blake2b_simd = "1.0"
rayon = "1.7"
hex = "0.4"
