[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
halo2_proofs = { workspace = true }
halo2curves = { workspace = true }
ff = { workspace = true }
group = { workspace = true }
rand_core = { workspace = true }
rand = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

ndarray = { workspace = true }
csv = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
log = { workspace = true }

# Additional dependencies for common
blake2b_simd = "1.0"
hex = "0.4"
