[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
common = { path = "../common" }

halo2_proofs = { workspace = true }
halo2curves = { workspace = true }
ff = { workspace = true }
group = { workspace = true }
rand_core = { workspace = true }
rand = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

tokio = { workspace = true }
warp = { workspace = true }

clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# Additional server dependencies
dashmap = "5.5"
parking_lot = "0.12"
